ZON-3259: Fix margin on small screens

--- a/sass/web.site/modules/article/_volume-teaser.sass
+++ b/sass/web.site/modules/article/_volume-teaser.sass
@@ -1,7 +1,8 @@
 .volume-teaser
 	@extend %figure-caption
 	margin-top: remify(45px)
-	margin-right: remify(50px)
 	margin-bottom: remify(28px)
+	+respond-min($break-tablet-min)
+		margin-right: remify(50px)
 	&__link
 		color: $grey
